[gd_scene load_steps=3 format=2]

[ext_resource path="res://weapons/base_projectile.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[node name="RigidBody2D" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeSpan" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_hit"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
